# Little-Emulator

./: .gitignore  CMakeLists.txt  README.md  main.asm
src/: cpu.cpp  cpu.hpp  cyclecounter.cpp  cyclecounter.hpp  globalConstants.hpp  gpu.cpp  gpu.hpp  main.cpp  memorybus.cpp  systembus.cpp
src/core/: cpu.cpp  cpu.hpp  cyclecounter.cpp  cyclecounter.hpp  globalConstants.hpp  gpu.cpp  gpu.hpp  memorybus.cpp  memorybus.hpp  systembus.cpp  systembus.hpp
